fixed nav on mobile screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -1013,8 +1013,8 @@ footer {
 
   nav.mobile {
     top: 28px;
-    width: 110%;
-    right: -5%;
+    width: 110vw;
+    right: -10vw;
   }
 
   .hero {
